@@ -9,6 +9,9 @@ What's New in Python 2.7.6?
 Core and Builtins
 -----------------
 
+- Issue #18739: Fix an inconsistency between math.log(n) and math.log(long(n));
+  the results could be off from one another by a ulp or two.
+
 - Issue #13461: Fix a crash in the "replace" error handler on 64-bit platforms.
   Patch by Yogesh Chaudhari.
 
